Chore(streamlink) : Change livestreamer to streamlink

--- a/config.cfg
+++ b/config.cfg
@@ -2,4 +2,10 @@ DATABASE_CONNECTION_STRING = "mongodb://localhost:27017"
 DATABASE_NAME = "AdYourChannelDev"
 CLUSTER_NAME = "cluster1"
 
+GET_STREAM_ID = "jzkbprff40iqj646a697cyrvl0zt2m6"
+
+APP_ID = "udciak7gm0oldx66jma1azzu4dsgnm"
+APP_SECRET = "ham6xdaasmsn6qhrd2exonupft8lmd"
+TARGET_STREAM_CHANNEL = "adyourchanneldev"
+
 LANGUAGE ="fr"
