--- a/config.cfg
+++ b/config.cfg
@@ -4,8 +4,10 @@ CLUSTER_NAME = "cluster1"
 
 GET_STREAM_ID = "jzkbprff40iqj646a697cyrvl0zt2m6"
 
+URL_CALL_BACK = "dev1.adyourchannel.com"
+
 APP_ID = "udciak7gm0oldx66jma1azzu4dsgnm"
 APP_SECRET = "ham6xdaasmsn6qhrd2exonupft8lmd"
-TARGET_STREAM_CHANNEL = "adyourchanneldev"
+STREAM_CHANNEL = "adyourchanneldev"
 
-LANGUAGE ="fr"
+LANGUAGE = "fr"
