--- a/config.cfg
+++ b/config.cfg
@@ -1,4 +1,5 @@
-DATABASE_CONNECTION_STRING = "mongodb://localhost:27017"
+# DATABASE_CONNECTION_STRING = "mongodb://localhost:27017/?tls=true&tlsCAFile=D%3A%5CInformatique%5CTwitch+Bot%5CrootCA.crt&tlsCertificateKeyFile=D%3A%5CInformatique%5CTwitch+Bot%5Cdev1.pem"
+DATABASE_CONNECTION_STRING = "mongodb://localhost:27017/"
 DATABASE_NAME = "AdYourChannelDev"
 CLUSTER_NAME = "cluster1"
 
@@ -7,7 +8,7 @@ GET_STREAM_ID = "jzkbprff40iqj646a697cyrvl0zt2m6"
 URL_CALL_BACK = "dev1.adyourchannel.com"
 
 APP_ID = "udciak7gm0oldx66jma1azzu4dsgnm"
-APP_SECRET = "ham6xdaasmsn6qhrd2exonupft8lmd"
+APP_SECRET = "6di7akw2ad7u4aysaylfup6uf8ckyf"
 STREAM_CHANNEL = "adyourchanneldev"
 
 LANGUAGE = "fr"
