--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,13 +12,13 @@
             "console": "integratedTerminal",
             "justMyCode": true,
             "args": ["mongodb://localhost:27017/",
-                "AdYourChannelDev",
+                "LisquidStreamDev",
                 "cluster1",
                 "jzkbprff40iqj646a697cyrvl0zt2m6",
                 "dev1.adyourchannel.com",
-                "udciak7gm0oldx66jma1azzu4dsgnm",
-                "6di7akw2ad7u4aysaylfup6uf8ckyf",
-                "adyourchanneldev",
+                "6z4sumxq010mdd3s1qmw27oac05e74",
+                "wv2n4amlchoesbthuicyg2qf5okk6z",
+                "lisquidstreamfr",
                 "fr"]
         }
     ]
