--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -15,10 +15,10 @@
                 "LisquidStreamDev",
                 "cluster1",
                 "jzkbprff40iqj646a697cyrvl0zt2m6",
-                "dev1.adyourchannel.com",
-                "6z4sumxq010mdd3s1qmw27oac05e74",
-                "wv2n4amlchoesbthuicyg2qf5okk6z",
-                "lisquidstreamfr",
+                "dev1.lisquidstream.com",
+                "zu4s35379d3b9vqvf0eowy6wuqjjvp",
+                "6tigp2jevwfq9yrt5x9ev31z9g3gs0",
+                "lisquidstreamdev",
                 "fr"]
         }
     ]
